Colaboratory를 통해 생성됨

--- a/vectorize_test.ipynb
+++ b/vectorize_test.ipynb
@@ -6,7 +6,7 @@
       "name": "vectorize-test.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOJseR65ht4rfuVEEZP4hui",
+      "authorship_tag": "ABX9TyMkZ9FVfYbN4ahzcyb4oYRq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1008,7 +1008,88 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "[i for i in result4[0] if i != 0]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "dgM-lHHdNTeu",
+        "outputId": "583fd117-a375-4f78-8486-4313c3eae73e"
+      },
+      "execution_count": 127,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[1, 1]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 127
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sum([i for i in result4[0] if i != 0])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "NbM21pPgN9Ff",
+        "outputId": "ce2e47af-ac78-4fea-9d9a-144a1f99c816"
+      },
+      "execution_count": 128,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 128
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "[i for i in result3[0] if i != 0]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "RsTMMu9iNvDk",
+        "outputId": "838fabf7-0a8c-4b35-f32e-f3151e548a75"
+      },
+      "execution_count": 125,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[1, 1, 1]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 125
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "## 감정분류기\n",
+        "# 긍정/부정 사전을 만들어보세요.\n",
+        "# input()이용해서, 문장을 받으면, 긍정인지 부정인지 판단해보세요.\n",
+        "# if-idf vectorizer를 사용해주세요."
       ],
       "metadata": {
         "id": "I6KSEAYtGNPh"
